create github pages

--- a/page1.html
+++ b/page1.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">free landing page templates</a></section><section class="header5 cid-qQjaOBIlui mbr-fullscreen" id="header5-p">
+<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="header5 cid-qQjaOBIlui mbr-fullscreen" id="header5-p">
 
     
 
